tests/paczka1/fuzzy1/17699665.err
Error in line 17: A745 S107 108,0
Error in line 31: yp1w0EogtwM A878 29,7
